Analyses/xml.output
Terminaux qui ne sont utilisés

   CLOSESPECIAL
   ENCODING
   STARTSPECIAL


Grammaire

    0 $accept: document $end

    1 document: declarations element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt misc
    3             | /* vide */

    4 misc: COMMENT

    5 declarations: declaration
    6             | /* vide */

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE

    8 element: start empty_or_content

    9 start: START
   10      | NSSTART

   11 empty_or_content: SLASH CLOSE
   12                 | attributes close_content_and_end name_or_nsname_opt CLOSE

   13 attributes: attributes single_attribute
   14           | /* vide */

   15 single_attribute: NAME EQ VALUE

   16 name_or_nsname_opt: NAME
   17                   | NSNAME
   18                   | /* vide */

   19 close_content_and_end: CLOSE content END

   20 content: content DATA
   21        | content misc
   22        | content element
   23        | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EQ (258) 15
SLASH (259) 11
CLOSE (260) 7 11 12 19
END (261) 19
CLOSESPECIAL (262)
DOCTYPE (263) 7
ENCODING (264)
VALUE (265) 7 15
DATA (266) 20
COMMENT (267) 4
NAME (268) 7 15 16
NSNAME (269) 17
NSSTART (270) 10
START (271) 9
STARTSPECIAL (272)


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
document (19)
    à gauche: 1, à droite: 0
misc_seq_opt (20)
    à gauche: 2 3, à droite: 1 2
misc (21)
    à gauche: 4, à droite: 2 21
declarations (22)
    à gauche: 5 6, à droite: 1
declaration (23)
    à gauche: 7, à droite: 5
element (24)
    à gauche: 8, à droite: 1 22
start (25)
    à gauche: 9 10, à droite: 8
empty_or_content (26)
    à gauche: 11 12, à droite: 8
attributes (27)
    à gauche: 13 14, à droite: 12 13
single_attribute (28)
    à gauche: 15, à droite: 13
name_or_nsname_opt (29)
    à gauche: 16 17 18, à droite: 12
close_content_and_end (30)
    à gauche: 19, à droite: 12
content (31)
    à gauche: 20 21 22 23, à droite: 19 20 21 22


état 0

    0 $accept: . document $end

    DOCTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 6 (declarations)

    document      aller à l'état 2
    declarations  aller à l'état 3
    declaration   aller à l'état 4


état 1

    7 declaration: DOCTYPE . NAME NAME VALUE CLOSE

    NAME  décalage et aller à l'état 5


état 2

    0 $accept: document . $end

    $end  décalage et aller à l'état 6


état 3

    1 document: declarations . element misc_seq_opt

    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8

    element  aller à l'état 9
    start    aller à l'état 10


état 4

    5 declarations: declaration .

    $défaut  réduction par utilisation de la règle 5 (declarations)


état 5

    7 declaration: DOCTYPE NAME . NAME VALUE CLOSE

    NAME  décalage et aller à l'état 11


état 6

    0 $accept: document $end .

    $défaut  accepter


état 7

   10 start: NSSTART .

    $défaut  réduction par utilisation de la règle 10 (start)


état 8

    9 start: START .

    $défaut  réduction par utilisation de la règle 9 (start)


état 9

    1 document: declarations element . misc_seq_opt

    $défaut  réduction par utilisation de la règle 3 (misc_seq_opt)

    misc_seq_opt  aller à l'état 12


état 10

    8 element: start . empty_or_content

    SLASH  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 14 (attributes)

    empty_or_content  aller à l'état 14
    attributes        aller à l'état 15


état 11

    7 declaration: DOCTYPE NAME NAME . VALUE CLOSE

    VALUE  décalage et aller à l'état 16


état 12

    1 document: declarations element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . misc

    COMMENT  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 1 (document)

    misc  aller à l'état 18


état 13

   11 empty_or_content: SLASH . CLOSE

    CLOSE  décalage et aller à l'état 19


état 14

    8 element: start empty_or_content .

    $défaut  réduction par utilisation de la règle 8 (element)


état 15

   12 empty_or_content: attributes . close_content_and_end name_or_nsname_opt CLOSE
   13 attributes: attributes . single_attribute

    CLOSE  décalage et aller à l'état 20
    NAME   décalage et aller à l'état 21

    single_attribute       aller à l'état 22
    close_content_and_end  aller à l'état 23


état 16

    7 declaration: DOCTYPE NAME NAME VALUE . CLOSE

    CLOSE  décalage et aller à l'état 24


état 17

    4 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 4 (misc)


état 18

    2 misc_seq_opt: misc_seq_opt misc .

    $défaut  réduction par utilisation de la règle 2 (misc_seq_opt)


état 19

   11 empty_or_content: SLASH CLOSE .

    $défaut  réduction par utilisation de la règle 11 (empty_or_content)


état 20

   19 close_content_and_end: CLOSE . content END

    $défaut  réduction par utilisation de la règle 23 (content)

    content  aller à l'état 25


état 21

   15 single_attribute: NAME . EQ VALUE

    EQ  décalage et aller à l'état 26


état 22

   13 attributes: attributes single_attribute .

    $défaut  réduction par utilisation de la règle 13 (attributes)


état 23

   12 empty_or_content: attributes close_content_and_end . name_or_nsname_opt CLOSE

    NAME    décalage et aller à l'état 27
    NSNAME  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 18 (name_or_nsname_opt)

    name_or_nsname_opt  aller à l'état 29


état 24

    7 declaration: DOCTYPE NAME NAME VALUE CLOSE .

    $défaut  réduction par utilisation de la règle 7 (declaration)


état 25

   19 close_content_and_end: CLOSE content . END
   20 content: content . DATA
   21        | content . misc
   22        | content . element

    END      décalage et aller à l'état 30
    DATA     décalage et aller à l'état 31
    COMMENT  décalage et aller à l'état 17
    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8

    misc     aller à l'état 32
    element  aller à l'état 33
    start    aller à l'état 10


état 26

   15 single_attribute: NAME EQ . VALUE

    VALUE  décalage et aller à l'état 34


état 27

   16 name_or_nsname_opt: NAME .

    $défaut  réduction par utilisation de la règle 16 (name_or_nsname_opt)


état 28

   17 name_or_nsname_opt: NSNAME .

    $défaut  réduction par utilisation de la règle 17 (name_or_nsname_opt)


état 29

   12 empty_or_content: attributes close_content_and_end name_or_nsname_opt . CLOSE

    CLOSE  décalage et aller à l'état 35


état 30

   19 close_content_and_end: CLOSE content END .

    $défaut  réduction par utilisation de la règle 19 (close_content_and_end)


état 31

   20 content: content DATA .

    $défaut  réduction par utilisation de la règle 20 (content)


état 32

   21 content: content misc .

    $défaut  réduction par utilisation de la règle 21 (content)


état 33

   22 content: content element .

    $défaut  réduction par utilisation de la règle 22 (content)


état 34

   15 single_attribute: NAME EQ VALUE .

    $défaut  réduction par utilisation de la règle 15 (single_attribute)


état 35

   12 empty_or_content: attributes close_content_and_end name_or_nsname_opt CLOSE .

    $défaut  réduction par utilisation de la règle 12 (empty_or_content)
